--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ mybatis.type-aliases-package=com.eirapplets.pojo
 logging.level.com.pang.mapper=debug
 logging.level.com.pang.service=info
 logging.level.com.pang.controller=info
+
+
+photo.dir=D:\\springboot-study\\eir_applets\\src\\main\\resources\\static\\js
+#能web的形式能访问的头像路径，公开
+spring.resources.static-locations=classpath:/static/,file:${photo.dir}
